Add endpoint to set role grants
