# compute_tools/src/http/openapi_spec.yaml
@@ -10,7 +10,7 @@ paths:
   /status:
     get:
       tags:
-      - Info
+        - Info
       summary: Get compute node internal status.
       description: ""
       operationId: getComputeStatus
@@ -25,7 +25,7 @@ paths:
   /metrics.json:
     get:
       tags:
-      - Info
+        - Info
       summary: Get compute node startup metrics in JSON format.
       description: ""
       operationId: getComputeMetricsJSON
@@ -40,7 +40,7 @@ paths:
   /insights:
     get:
       tags:
-      - Info
+        - Info
       summary: Get current compute insights in JSON format.
       description: |
         Note, that this doesn't include any historical data.
@@ -56,7 +56,7 @@ paths:
   /installed_extensions:
     get:
       tags:
-      - Info
+        - Info
       summary: Get installed extensions.
       description: ""
       operationId: getInstalledExtensions
@@ -70,7 +70,7 @@ paths:
   /info:
     get:
       tags:
-      - Info
+        - Info
       summary: Get info about the compute pod / VM.
       description: ""
       operationId: getInfo
@@ -130,7 +130,7 @@ paths:
   /check_writability:
     post:
       tags:
-      - Check
+        - Check
       summary: Check that we can write new data on this compute.
       description: ""
       operationId: checkComputeWritability
@@ -147,7 +147,7 @@ paths:
   /configure:
     post:
       tags:
-      - Configure
+        - Configure
       summary: Perform compute node configuration.
       description: |
         This is a blocking API endpoint, i.e. it blocks waiting until
@@ -201,7 +201,7 @@ paths:
   /extension_server:
     post:
       tags:
-      - Extension
+        - Extension
       summary: Download extension from S3 to local folder.
       description: ""
       operationId: downloadExtension
@@ -230,7 +230,7 @@ paths:
   /terminate:
     post:
       tags:
-      - Terminate
+        - Terminate
       summary: Terminate Postgres and wait for it to exit
       description: ""
       operationId: terminate
@@ -369,7 +369,7 @@ components:
             moment, when spec was received.
           example: "2022-10-12T07:20:50.52Z"
         status:
-          $ref: '#/components/schemas/ComputeStatus'
+          $ref: "#/components/schemas/ComputeStatus"
         last_active:
           type: string
           description: |
@@ -426,6 +426,28 @@ components:
                   type: string
               n_databases:
                 type: integer
+
+    SetRoleGrantsRequest:
+      type: object
+      required:
+        - database
+        - role
+        - grants
+      properties:
+        database:
+          type: string
+          description: Database name.
+          example: "neondb"
+        role:
+          type: string
+          description: Role name.
+          example: "neon"
+        grants:
+          type: array
+          items:
+            type: string
+          description: List of grants to set.
+          example: ["SELECT", "INSERT"]
 
     #
     # Errors
